fixed link in mobile menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		  	<button type="submit"><img src="img/about.png" alt="about bp" class="img"></button>
 		</header>
 		<div class="centeredTopImage">
-      <p>Menu</p>
+      		<p>Menu</p>
 			<img src="img/about.png" alt="bpsociety" class="centeredTopImg img">
 		</div>
 		<img src="img/main.png" alt="absolute freedom" class="freedom img">
@@ -58,7 +58,7 @@
 					</a>
 				</li>
 				<li class="kontaktContainer">
-					<a href="info.html" class="">
+					<a href="kontakt.html" class="">
 						<img src="img/kontakt.png" alt="kontakt image" class="kontaktImg img">
 						<p>Kontakt</p>
 					</a>
