--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
   	<footer class="footer">
   		<p>possible solutions &trade;</p>
   	</footer>
-  	<script src="js/loader.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/mobile.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/desktop.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/player.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/jscode.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
