--- a/kontakt.html
+++ b/kontakt.html
@@ -90,9 +90,6 @@
   	<footer class="footer">
   		<p>szymski solutions &trade;</p>
   	</footer>
-  	<script src="js/loader.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/mobile.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/scroller.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/player.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/jscode.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
