js code links fix

--- a/gallery.html
+++ b/gallery.html
@@ -76,10 +76,7 @@
   	<p>possible solutions &copy;</p>
   	</footer>
   	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  	<script src="js/loader.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/mobile.js" type="text/javascript" charset="utf-8"></script>
+  	<script src="js/jscode.js" type="text/javascript" charset="utf-8"></script>
   	<script src="js/gallery.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/scroller.js" type="text/javascript" charset="utf-8"></script>
-  	<script src="js/player.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
