update to the newest version

--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Art Of Graf | bpsociety</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Bangers|Rock+Salt" rel="stylesheet">
-    <link rel="stylesheet" href="css/gallery.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Rock+Salt|Indie+Flower&subset=latin,latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="css/gallery.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -53,20 +53,20 @@
 				</nav> <!--nav end-->
 		</div> <!--wrapperLeft end-->
 		<ul class="gallery"></ul>
-		<div id="overlay">
-			<div class="overlayImgContainer">
-				<div class="overlayArrowLeftImgContainer">
-					<img src="img/arrow.png" alt="arrow to the left" class="img overlayArrowLeftImg">
+			<div id="overlay">
+				<div class="overlayImgContainer">
+					<div class="overlayArrowLeftImgContainer">
+						<img src="img/arrow.png" alt="arrow to the left" class="img overlayArrowLeftImg">
+					</div>
+						<img src="img/gallery/gallery3.jpg" alt="image 1" class="img overlayImg">
+					<div class="overlayArrowRightImgContainer">
+						<img src="img/arrow.png" alt="arrow to the right" class="img overlayArrowRightImg">
+					</div>
+					<div class="overlayQuitImgContainer">
+						<img src="img/CloseButton.png" alt="close" class="img">
+					</div>
 				</div>
-					<img src="img/gallery/gallery3.jpg" alt="image 1" class="img overlayImg">
-				<div class="overlayArrowRightImgContainer">
-					<img src="img/arrow.png" alt="arrow to the right" class="img overlayArrowRightImg">
-				</div>
-				<div class="overlayQuitImgContainer">
-					<img src="img/CloseButton.png" alt="close" class="img">
-				</div>
-			</div>
-		</div> <!--overlay end-->
+			</div> <!--overlay end-->
 	</div> <!--wrapper end-->
 	<div class="loaderWrapper">
 		<div class="loader1 loading"></div>
