--- a/info.html
+++ b/info.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Art Of Graf | bpsociety</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Bangers|Rock+Salt" rel="stylesheet">
-    <link rel="stylesheet" href="css/info.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Rock+Salt|Indie+Flower&subset=latin,latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="css/info.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -53,16 +53,25 @@
 		<div class="infoWrapper">
 			<figure>
 				<img src="img/gallery/gallery1.jpg" alt="gallery">
-				<figcaption></figcaption>
 			</figure>
 			<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc neque justo, blandit vel placerat eu, porttitor id enim. Nullam lorem velit, mattis non nisi venenatis, sodales iaculis velit. Etiam tincidunt arcu nec risus convallis mattis. Maecenas consequat cursus felis, vitae fermentum augue viverra et. Nam fringilla non nibh quis ullamcorper. Etiam fermentum lectus quis dolor rutrum rhoncus non vitae nibh. Etiam eget vehicula nunc. Phasellus venenatis tempor turpis, tristique viverra odio tempus pharetra. Cras mollis, sapien vel porta feugiat, est nulla pharetra metus, vitae mattis metus velit quis justo. Duis eleifend varius commodo. Aliquam a fermentum felis. Morbi maximus quis odio in finibus. In consequat, orci faucibus faucibus blandit, mi odio euismod tellus, vel tempor mi turpis quis urna. Maecenas volutpat ex quis nisi tempus vulputate. Etiam faucibus euismod iaculis.
+			"Sztuką dla mnie jest tylko to, czego wandale nie chcą zniszczyć" - Energy
 			<br>
 			<br>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc neque justo, blandit vel placerat eu, porttitor id enim. Nullam lorem velit, mattis non nisi venenatis, sodales iaculis velit. Etiam tincidunt arcu nec risus convallis mattis. Maecenas consequat cursus felis, vitae fermentum augue viverra et. Nam fringilla non nibh quis ullamcorper. Etiam fermentum lectus quis dolor rutrum rhoncus non vitae nibh. Etiam eget vehicula nunc. Phasellus venenatis tempor turpis, tristique viverra odio tempus pharetra. Cras mollis, sapien vel porta feugiat, est nulla pharetra metus, vitae mattis metus velit quis justo. Duis eleifend varius commodo. Aliquam a fermentum felis. Morbi maximus quis odio in finibus. In consequat, orci faucibus faucibus blandit, mi odio euismod tellus, vel tempor mi turpis quis urna. Maecenas volutpat ex quis nisi tempus vulputate. Etiam faucibus euismod iaculis.
+			Art of graf przedstawia galerię sztuki w internecie, oraz ułatwia kontakt z twórcami prezentowanych dzieł.
 			<br>
 			<br>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc neque justo, blandit vel placerat eu, porttitor id enim. Nullam lorem velit, mattis non nisi venenatis, sodales iaculis velit. Etiam tincidunt arcu nec risus convallis mattis. Maecenas consequat cursus felis, vitae fermentum augue viverra et. Nam fringilla non nibh quis ullamcorper. Etiam fermentum lectus quis dolor rutrum rhoncus non vitae nibh. Etiam eget vehicula nunc. Phasellus venenatis tempor turpis, tristique viverra odio tempus pharetra. Cras mollis, sapien vel porta feugiat, est nulla pharetra metus, vitae mattis metus velit quis justo. Duis eleifend varius commodo. Aliquam a fermentum felis. Morbi maximus quis odio in finibus. In consequat, orci faucibus faucibus blandit, mi odio euismod tellus, vel tempor mi turpis quis urna. Maecenas volutpat ex quis nisi tempus vulputate. Etiam faucibus euismod iaculis.
+			Dzięki temu osoby zainteresowane mogą przyjrzeć się realizowanym przedsięwzięciom artystycznym, a także wesprzeć rozwój działalności Art of graf poprzez:
+			</p>	
+			<ul>
+				<li>zamówienie produktów i usług</li>
+				<li>udostępnienie atrakcyjnych powierzchni do autoreklamy</li>
+				<li>sprezentowanie farb i narzędzi do pracy</li>
+				<li>przekazanie dotacji</li>
+				<li>zaproponowanie alternatywnej formy współpracy</li>
+			</ul>
+			<p>
+			Dbamy o to, aby sztuka malowania artystycznego jako wyczyn zaistniały i trwały w kulturze Hip-Hop pod postacią prawdziwego graffiti; w sieci jawiła się jako szczery szacunek oddany oryginalnej formie ekspresji poprzez naturalną realizację potrzeby uaktywnienia i uzewnętrznienia współtwórców sceny graffiti w przestrzeni wirtualnej uwrażliwiając odbiorców swojego przekazu na efekty wizualne, a w konsekwencji uświadamiała percepcję w stopniu znaczącym, wywierając wpływ na świat.
 			</p>
 		</div> <!--infoWrapper end-->
 	</div> <!--wrapper end-->
