--- a/kontakt_withform.html
+++ b/kontakt_withform.html
@@ -53,12 +53,25 @@
   			</nav>
   		</div> <!--wrapperLeft end-->
   		<div class="formWrapper">
+  			<form action="php/contact.php" method="post">
   		        <h1>Napisz do nas!</h1>
+  		        <div class="form">
+  			        <label for="name">Imię:</label>
+  			        <input type="text" id="name" name="user_name" required>
+  			        <label for="mail">Email:</label>
+  			        <input type="email" id="mail" name="user_email" required>
+  			        <label for="phone">Telefon:</label>
+  			        <input type="tel" id="phone" name="user_phone" required pattern="^\+?\d+">
+  			        <label for="message">Wiadomość:</label>
+  			        <textarea id="message" name="user_message" required></textarea>
+  		        </div>
+  		        	<input type="submit" value="Wyślij">
+  		    </form>
   			<div class="formInfo clearfix">
-					<span>Email: konrad.konrad@wp.pl</span>
   				<figure>
   				    <img src="img/gallery/gallery18.jpg" alt="aorta" class="kontaktMainImg">
-  				</figure>    
+  				</figure>
+  				    <span>Email: konrad.konrad@wp.pl</span>
   			</div> <!--formInfo end-->
   		    <div class="social">
   		     	<a href="https://facebook.com" class="">
